HandBoard.cydsn/BUILD.log
--------------- Build Started: 11/17/2022 17:17:33 Project: HandBoard, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\kratz\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\kratz\OneDrive\Documents\PSoC Creator\HandBoard_2023\HandBoard.cydsn\HandBoard.cyprj" -d CY8C4248BZI-L489 -s "C:\Users\kratz\OneDrive\Documents\PSoC Creator\HandBoard_2023\HandBoard.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/PCA9685.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c PCA9685.c -o .\CortexM0\ARM_GCC_541\Debug\PCA9685.o
PCA9685.c: In function 'pca_init':
PCA9685.c:17:5: warning: implicit declaration of function 'I2C_Start' [-Wimplicit-function-declaration]
     I2C_Start();
     ^
PCA9685.c:18:5: warning: implicit declaration of function 'I2C_Enable' [-Wimplicit-function-declaration]
     I2C_Enable();
     ^
PCA9685.c: In function 'writeBuffer':
PCA9685.c:77:12: warning: implicit declaration of function 'I2C_I2CMasterClearStatus' [-Wimplicit-function-declaration]
     (void) I2C_I2CMasterClearStatus();
            ^
PCA9685.c:78:14: error: 'I2C_I2C_MSTR_NO_ERROR' undeclared (first use in this function)
          if( I2C_I2C_MSTR_NO_ERROR ==  I2C_I2CMasterWriteBuf(PCA9685Address, buff,
              ^
PCA9685.c:78:14: note: each undeclared identifier is reported only once for each function it appears in
PCA9685.c:78:40: warning: implicit declaration of function 'I2C_I2CMasterWriteBuf' [-Wimplicit-function-declaration]
          if( I2C_I2C_MSTR_NO_ERROR ==  I2C_I2CMasterWriteBuf(PCA9685Address, buff,
                                        ^
PCA9685.c:79:73: error: 'I2C_I2C_MODE_COMPLETE_XFER' undeclared (first use in this function)
                                                             bufferSize, I2C_I2C_MODE_COMPLETE_XFER)){
                                                                         ^
PCA9685.c:82:23: warning: implicit declaration of function 'I2C_I2CMasterStatus' [-Wimplicit-function-declaration]
         while (0u == (I2C_I2CMasterStatus() & I2C_I2C_MSTAT_WR_CMPLT))
                       ^
PCA9685.c:82:47: error: 'I2C_I2C_MSTAT_WR_CMPLT' undeclared (first use in this function)
         while (0u == (I2C_I2CMasterStatus() & I2C_I2C_MSTAT_WR_CMPLT))
                                               ^
PCA9685.c:87:44: error: 'I2C_I2C_MSTAT_ERR_XFER' undeclared (first use in this function)
         if (0u == (I2C_I2CMasterStatus() & I2C_I2C_MSTAT_ERR_XFER))
                                            ^
PCA9685.c:90:17: warning: implicit declaration of function 'I2C_I2CMasterGetWriteBufSize' [-Wimplicit-function-declaration]
             if (I2C_I2CMasterGetWriteBufSize() == bufferSize)
                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 11/17/2022 17:17:53 ---------------
